:white_check_mark: test: Add unit testing for Themeing components.
Added unit tests for StaticTheme and DynamicTheme, refactored into smaller tests and files.
This closes #46

--- a/packages/premail-components/src/theme/day-theme-mixin.scss
+++ b/packages/premail-components/src/theme/day-theme-mixin.scss
@@ -1,4 +1,7 @@
+@import "./generated-palettes/day-theme.scss";
+
 @mixin day-theme {
+  @include day-theme-palette;
   /* General */
   --backdrop-background-color: #fff;
 
