:sparkles: feat: Create Typography component.
* Created Typography component
* Change @premail/components tsconfig to "jsx":"react"
* Fix ambient vars file
This closes #5

--- a/packages/premail-components/src/theme/day-theme-mixin.scss
+++ b/packages/premail-components/src/theme/day-theme-mixin.scss
@@ -21,7 +21,7 @@
   --button-secondary-color: #000;
 
   /* Typography */
-  --typography-color: #000;
+  --typography-color: var(--premail-black);
 
   /* Card */
   --card-background-color: var(--white-main);
