:sparkles: Create button component and card component
* Implementing button component.
* Implement Card component.
* Upgrade @types/react-dom
This closes #43
This closes #4

--- a/packages/premail-components/src/theme/day-theme.scss
+++ b/packages/premail-components/src/theme/day-theme.scss
@@ -3,3 +3,10 @@
 :global(.day) {
   @include day-theme;
 }
+
+svg {
+  vertical-align: middle;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+}
