--- a/packages/premail-components/src/theme/variables.scss
+++ b/packages/premail-components/src/theme/variables.scss
@@ -41,7 +41,7 @@
   --font-weight-bold: 700;
 
   /*Accessibility*/
-  --a11y-box-shadow-width: 0.1rem;
+  --a11y-box-shadow-width: 1px;
 
   /* Warinings */
   --error-color: #ec7777;
