--- a/packages/premail-components/src/theme/a11y.scss
+++ b/packages/premail-components/src/theme/a11y.scss
@@ -1,6 +1,6 @@
 @mixin a11y-oulline {
   position: relative;
-  z-index: 0;
+  z-index: auto;
   &:focus,
   &:focus-within {
     outline: none;
@@ -10,14 +10,15 @@
     content: " ";
     border-radius: var(--a11y-box-shadow-radius);
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    width: calc(100% + 6px);
+    height: calc(100% + 6px);
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 50%);
+
     box-shadow: 0 0 0 var(--a11y-box-shadow-width) var(--a11y-box-shadow-color);
     opacity: 0;
-    transition: opacity 100ms ease-in-out;
-    z-index: -1;
+    z-index: 5;
   }
   &:focus-within::before {
     /* Show the pseudo-element on hover. */
