:recycle: refactor: Refactor Card themeing variables to use palette colors.
* Replace old variables with palette variables
* Fix Card import in button story
* Create Card storybook file.
* Extend generatePalette to generate theme variables.

This closes #67.
This closes #65
This closes #64
This closes #71
This closes #70

--- a/packages/premail-components/src/components/Card/Card.module.scss
+++ b/packages/premail-components/src/components/Card/Card.module.scss
@@ -2,7 +2,7 @@
   background: var(--card-background-color) 0% 0% no-repeat border-box;
   opacity: 1;
   padding: 10px 24px 10px 24px;
-  border-radius: 8px;
+  border-radius: var(--card-border-radius);
   box-sizing: border-box;
 }
 .border {
@@ -31,7 +31,7 @@
   box-shadow: var(--card-shadow-color) 0px 4px 10px 0px;
 }
 .elevation-8 {
-  box-shadow: var(--card-shadow-color) 0px 4px 10px 0px;
+  box-shadow: var(--card-shadow-color) 0px 4px 11px 0px;
 }
 .elevation-9 {
   box-shadow: var(--card-shadow-color) 0px 4px 12px 0px;
