:memo: docs: Improve Typography storybook docs and allow smaller text.
* Created Overview story for typography
* Create p1,p2 and p3 render variants for smaller text sizes.
* Create renderElement prop in Typography to allow custom render tag.
* Create disableMargin prop in Typography to remove margin from text.
* Refactor link and strikethrough variants
* Remove enums in favour of strings.
This closes #67
This closes #75

--- a/packages/premail-components/src/components/Card/Card.module.scss
+++ b/packages/premail-components/src/components/Card/Card.module.scss
@@ -8,6 +8,21 @@
 .border {
   border: 1px solid var(--card-border-color);
 }
+.disable-border-block-start {
+  border-block-start: none;
+}
+
+.disable-border-block-end {
+  border-block-end: none;
+}
+
+.disable-border-inline-start {
+  border-inline-start: none;
+}
+
+.disable-border-inline-end {
+  border-inline-end: none;
+}
 
 .elevation-1 {
   box-shadow: var(--card-shadow-color) 0px 1px 1px 0px;
