:sparkles: feat: Implement Dashboard Template
This closes #3

--- a/packages/premail-components/src/components/Button/ButtonGroup.module.scss
+++ b/packages/premail-components/src/components/Button/ButtonGroup.module.scss
@@ -1,12 +1,13 @@
 .root {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   box-sizing: border-box;
   white-space: nowrap;
-  :not(:last-child) {
-    border-inline-end: var(--button-group-border-inline-end);
-  }
 }
 
 .outline {
   border: var(--button-group-border);
+  :not(:last-child) {
+    border-inline-end: var(--button-group-border-inline-end);
+  }
 }
