:recycle: refactor: Rename Card to Surface
* Renamed Card to Surface
* Improve testing coverage
* Extend storybook

--- a/packages/premail-components/src/theme/day-theme-mixin.scss
+++ b/packages/premail-components/src/theme/day-theme-mixin.scss
@@ -47,11 +47,11 @@
   /* Typography */
   --typography-color: var(--premail-black);
 
-  /* Card */
-  --card-background-color: var(--pramail-white);
-  --card-border-color: var(--premail-gray-1);
-  --card-shadow-color: var(--premail-shadow);
-  --card-border-radius: var(--premail-border-radius-common);
+  /* Surface */
+  --surface-background-color: var(--pramail-white);
+  --surface-border-color: var(--premail-gray-1);
+  --surface-shadow-color: var(--premail-shadow);
+  --surface-border-radius: var(--premail-border-radius-common);
 
   /* Dashboard Template */
   --dashboard-template-header-height: 60px;
