--- a/packages/premail-components/src/theme/night-theme.scss
+++ b/packages/premail-components/src/theme/night-theme.scss
@@ -20,10 +20,10 @@
   /* Typography */
   --typography-color: var(--dark-contrast);
 
-  /* Card */
-  --card-background-color: var(--dark-main);
-  --card-border-color: var(--gray-main);
-  --card-shadow-color: rgb(255 255 255 / 35%);
+  /* Surface */
+  --surface-background-color: var(--dark-main);
+  --surface-border-color: var(--gray-main);
+  --surface-shadow-color: rgb(255 255 255 / 35%);
 
   /* Header Banner */
   --header-banner-background-color: var(--dark-dark);
