:sparkles: feat: Implement Email editor toolbar, toolbar tab switcher.
* Implement Email editor toolbar.
* Implement Email editor toolbar tab switcher.
* Implement state instance manager and refactor state utilities.

This closes #6.
This closes #58.
This closes #11.

--- a/packages/premail-components/src/components/DashboardTemplate/DashboardTemplate.module.scss
+++ b/packages/premail-components/src/components/DashboardTemplate/DashboardTemplate.module.scss
@@ -10,6 +10,7 @@
   background-color: var(--dashboard-template-header-background-color);
   display: flex;
   min-width: inherit;
+  overflow: hidden;
 }
 
 .body {
@@ -19,11 +20,14 @@
 }
 
 .previewArea {
-  width: 80%;
+  flex: 1;
+  max-width: 80vw;
   min-width: 500px;
+  overflow: hidden;
 }
 
 .toolbar {
-  width: 20%;
+  flex: 1;
+  max-width: 20vw;
   min-width: 300px;
 }
