--- a/packages/premail-components/src/theme/day-theme-mixin.scss
+++ b/packages/premail-components/src/theme/day-theme-mixin.scss
@@ -53,6 +53,11 @@
   --surface-shadow-color: var(--premail-shadow);
   --surface-border-radius: var(--premail-border-radius-common);
 
+  /* Email Editor*/
+  --email-editor-toolbar-switcher-active-color: var(--premail-black);
+  --email-editor-toolbar-switcher-inactive-color: var(--premail-gray-3);
+  --email-editor-toolbar-border-color: var(--premail-gray-1);
+
   /* Dashboard Template */
   --dashboard-template-header-height: 60px;
   --dashboard-template-header-background-color: var(--premail-black);
