:sparkles: feat: Implement EmailEditorContentBlockTab
This closes #12

--- a/packages/premail-components/src/components/DashboardTemplate/DashboardTemplate.module.scss
+++ b/packages/premail-components/src/components/DashboardTemplate/DashboardTemplate.module.scss
@@ -21,13 +21,12 @@
 
 .previewArea {
   flex: 1;
-  max-width: 80vw;
   min-width: 500px;
   overflow: hidden;
 }
 
 .toolbar {
   flex: 1;
-  max-width: 20vw;
+  max-width: 430px;
   min-width: 300px;
 }
