--- a/packages/premail-components/src/theme/day-theme-mixin.scss
+++ b/packages/premail-components/src/theme/day-theme-mixin.scss
@@ -57,6 +57,9 @@
   --email-editor-toolbar-switcher-active-color: var(--premail-black);
   --email-editor-toolbar-switcher-inactive-color: var(--premail-gray-3);
   --email-editor-toolbar-border-color: var(--premail-gray-1);
+  --email-editor-content-block-tab-background-color: var(--premail-white);
+  --email-editor-content-block-tab-text-color: var(--premail-black);
+  --email-editor-content-block-tab-item-color: var(--premail-gray-6);
 
   /* Dashboard Template */
   --dashboard-template-header-height: 60px;
