:sparkles: feat: Implement Email settings tab
This closes #15
This closes #78

--- a/packages/premail-components/src/theme/day-theme-mixin.scss
+++ b/packages/premail-components/src/theme/day-theme-mixin.scss
@@ -64,6 +64,7 @@
     --premail-gray-0
   );
   --email-editor-toolbar-layout-block-item-border-color: var(--premail-gray-3);
+  --email-editor-toolbar-section-border-color: var(--premail-gray-0);
 
   /* Dashboard Template */
   --dashboard-template-header-height: 60px;
